--- a/MusicStoreApp/Views/Home/Index.cshtml
+++ b/MusicStoreApp/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
-}
+    ViewBag.Title = "Index";
+    }
+<h2>This is the home page</h2>
 
 @*<div class="jumbotron">
     <h1>ASP.NET</h1>
