--- a/MusicStoreApp/Views/Shared/_Layout.cshtml
+++ b/MusicStoreApp/Views/Shared/_Layout.cshtml
@@ -9,41 +9,18 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        <div id="header">
+            <div id="header">
             <h1>Asp.Net MVC MUSIC STORE</h1>
             <ul id="navlist">
                 <li class="first"><a href="/" id="current">Home</a>   </li>
-                <li><a href="/Store/">Store</a></li>
+                <li><a href="/Store/">Store</a></li>            </ul>
+        
 
-            </ul>
-        </div>
-
-        @RenderBody()
+       
         <hr />
        
     </div>
-
+    @RenderBody()
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
